--- a/src/ODataPricing/project.json
+++ b/src/ODataPricing/project.json
@@ -6,10 +6,10 @@
     "projectUrl": "",
     "licenseUrl": "",
 
-    "dependencies": {
-        "Microsoft.AspNet.WebApi.Client": "5.2.3-beta1",
-        "Microsoft.Framework.Configuration.Json": "1.0.0-beta8"
-    },
+  "dependencies": {
+    "Microsoft.AspNet.WebApi.Client": "5.2.3",
+    "Microsoft.Framework.Configuration.Json": "1.0.0-beta8"
+  },
 
     "frameworks": {
         "dnx451": { }
